--- a/databasetheory/english/templates/english/english.html
+++ b/databasetheory/english/templates/english/english.html
@@ -11,14 +11,14 @@
 			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 words">
 				<div class="russian">
 					{% for word in russian_words %}
-						<button n={{word.id}}>{{word.defenition}}</button><br>
+						<button n={{word.id}}></button><br>
 					{% endfor %}
 				</div>
 			</div>
 			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 words">
 				<div class="english">
 					{% for word in english_words %}
-						<button n={{word.id}}>{{word.title}}</button><br>
+						<button n={{word.id}}></button><br>
 					{% endfor %}
 				</div>
 			</div>
